--- a/package.json
+++ b/package.json
@@ -38,9 +38,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "request": "^2.83.0",
-    "underscore": "^1.8.3"
-  },
-  "devDependencies": {
+    "underscore": "^1.8.3",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.1",
@@ -53,6 +51,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "webpack": "^2.7.0"
+  },
+  "devDependencies": {
   },
   "babel": {
     "presets": [
